# HomePrism

./: CMakeLists.txt  CvImageWidget.h  HomePrism.cpp  HomePrism.h  HomePrism.ui  HomePrismConfig.h.in  README.md  main.cpp  resources.qrc
