# start
cmake_minimum_required (VERSION 2.6)
project (HomePrism)

#version
SET(HomePrism_MAJOR_VERSION 1)
SET(HomePrism_MINOR_VERSION 0)
SET(HomePrism_PATCH_VERSION 0)

# config
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/HomePrismConfig.h.in ${CMAKE_CURRENT_BINARY_DIR}/HomePrismConfig.h)

# opencv
FIND_PACKAGE( OpenCV REQUIRED )

# qt
FIND_PACKAGE( Qt4 REQUIRED )
#SET(QT_USE_QTNETWORK TRUE)
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

# sources
SET(HomePrism_SOURCES main.cpp HomePrism.cpp)
SET(HomePrism_HEADERS HomePrism.h)
SET(HomePrism_RCCS resources.qrc)
SET(HomePrism_FORMS HomePrism.ui)

# generate rules for building source files from the resources
QT4_ADD_RESOURCES(HomePrism_RCC_SRCS ${HomePrism_RCCS})
QT4_WRAP_CPP(HomePrism_HEADERS_MOC ${HomePrism_HEADERS})
QT4_WRAP_UI(HomePrism_FORMS_HEADERS ${HomePrism_FORMS})

# include dir
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

# executable and link libraries
ADD_EXECUTABLE( ${PROJECT_NAME} WIN32 MACOSX_BUNDLE
    ${HomePrism_HEADERS} 
    ${HomePrism_SOURCES} 
    ${HomePrism_HEADERS_MOC}    
    ${HomePrism_FORMS_HEADERS} 
    ${HomePrism_RCC_SRCS})    
    
Set_Target_Properties(${PROJECT_NAME} PROPERTIES
	LINK_FLAGS_RELEASE /ENTRY:"mainCRTStartup"
	LINK_FLAGS_DEBUG /SUBSYSTEM:CONSOLE)

TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${QT_LIBRARIES})

# cpack
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)

SET(CPACK_PACKAGE_VERSION_MAJOR ${HomePrism_MAJOR_VERSION})
SET(CPACK_PACKAGE_VERSION_MINOR ${HomePrism_MINOR_VERSION})
SET(CPACK_PACKAGE_VERSION_PATCH ${HomePrism_PATCH_VERSION})
IF(WIN32)
  SET(QT_DLLS "${QT_BINARY_DIR}/QtCore4.dll" "${QT_BINARY_DIR}/QtGui4.dll")
  INSTALL(FILES ${QT_DLLS} DESTINATION bin)
  SET(CPACK_GENERATOR ZIP)
  SET(CPACK_SOURCE_GENERATOR ZIP)
ELSE(WIN32)
  SET(CPACK_GENERATOR TGZ)
  SET(CPACK_SOURCE_GENERATOR TGZ)
ENDIF(WIN32)

INCLUDE(CPack)
